# YusekX-Multi-effects-pedal

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md
Guide-to-Effects-Pedal-Development/: BaseCompressor-guide.md  SchroederReverb-guide.md  YOK3508.md  overSampling_on_overdrive.md  schroederReverb_VS_FDNReverb.md
Utils/: CMakeLists.txt  UtilsEffect.cpp  UtilsEffect.h  constants.h  dataStructs.cpp  dataStructs.h  dspFilters.cpp  dspFilters.h  mathFunc.cpp  mathFunc.h  table.cpp  table.h
copilot_docs/: JUCE_STYLE.md  STYLE.md  效果器框架构筑指南.md
docs/: YOK3508.md
plugins/: CMakeLists.txt  plugins.h
plugins/Booster/: CMakeLists.txt  base_overdrive.cpp  base_overdrive.h
plugins/Delay/: CMakeLists.txt  base_delay.cpp  base_delay.h  sine_surround.cpp  sine_surround.h
plugins/EQ/: CMakeLists.txt  eq.cpp  eq.h
plugins/MOD/: CMakeLists.txt  flanger.cpp  flanger.h  multiChannelsChorus.cpp  multiChannelsChorus.h
plugins/Reverb/: CMakeLists.txt  FDNReverb.cpp  FDNReverb.h  SchroederReverb.cpp  SchroederReverb.h
plugins/Tremolo/: CMakeLists.txt  base_tremolo.cpp  base_tremolo.h
plugins/dynamics/: CMakeLists.txt  base_compressor.cpp  base_compressor.h  ducker.cpp  ducker.h
